# gripperquickchange_bridge

./: CMakeLists.txt  package.xml
config/: GripperSelf.yaml  robotIO_fourfinger.yaml  robotIO_twofinger.yaml  serialGripper_fivefinger.yaml
include/: GripperManage.h  GripperQuickChange.h  GripperSelf.h  Hsc3RobotMove.h  Hsc3apiInstance.h
launch/: gripper_bridge1.launch  gripper_bridge_dual.launch  gripper_bridge_finger.launch
msg/: gripperShelfInfo.msg  gripperShelf_4p.msg  robotToolInfo.msg  shelfStatus.msg
src/: GripperManage.cpp  GripperQuickChange.cpp  GripperSelf.cpp  Hsc3RobotMove.cpp  Hsc3apiInstance.cpp  main.cpp
srv/: quickChange_getStatus.srv  quickChange_robStepMove.srv  quickChange_run.srv  quickChange_set.srv  quickChange_set4.srv
